templates/Linux-2Vms-LB/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "dns_name": {
            "defaultValue": "cloudniners",
            "type": "String"
        },
        "VM_dbserver_adminPassword": {
            "defaultValue": null,
            "type": "SecureString"
        },
        "VM_webserver_adminPassword": {
            "defaultValue": null,
            "type": "SecureString"
        },
        "availabilitySet_name": {
            "defaultValue": "C9AS",
            "type": "String"
        },
        "VM_dbserver_name": {
            "defaultValue": "c9-dbserver",
            "type": "String"
        },
        "VM_webserver_name": {
            "defaultValue": "c9-webserver",
            "type": "String"
        },
        "loadBalancers_name": {
            "defaultValue": "C9-LB",
            "type": "String"
        },
        "dbserver_NIC_name": {
            "defaultValue": "c9-dbserverNIC",
            "type": "String"
        },
        "webserver_NIC_name": {
            "defaultValue": "c9-webserverNIC",
            "type": "String"
        },
        "networkSecurityGroup_name": {
            "defaultValue": "C9-NSG",
            "type": "String"
        },
        "publicIPAddresse_name": {
            "defaultValue": "C9-LB-PIP",
            "type": "String"
        },
        "virtualNetwork_name": {
            "defaultValue": "c9VNet",
            "type": "String"
        },
        "storageAccount_name": {
            "defaultValue": "c9testsa",
            "type": "String"
        }
    },
    "variables": { 
        "lbID": "[resourceId('Microsoft.Network/loadBalancers',parameters('loadBalancers_name'))]",
        "frontEndIPConfigID": "[concat(variables('lbID'),'/frontendIPConfigurations/LBFE')]",
        "lbPoolID" : "[concat(variables('lbID'),'/backendAddressPools/LBBE')]",
        "lbProbeID": "[concat(variables('lbID'),'/probes/http-probe')]"
    },
    "resources": [
        {
            "type": "Microsoft.Compute/availabilitySets",
            "name": "[parameters('availabilitySet_name')]",
            "apiVersion": "2015-06-15",
            "location": "westeurope",
            "properties": {
                "platformUpdateDomainCount": 5,
                "platformFaultDomainCount": 3
            },
            "dependsOn": []
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('VM_dbserver_name')]",
            "apiVersion": "2015-06-15",
            "location": "westeurope",
            "tags": {},
            "properties": {
                "availabilitySet": {
                    "id": "[resourceId('Microsoft.Compute/availabilitySets', parameters('availabilitySet_name'))]"
                },
                "hardwareProfile": {
                    "vmSize": "Standard_A2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "OpenLogic",
                        "offer": "CentOs",
                        "sku": "6.6",
                        "version": "6.6.20160309"
                    },
                    "osDisk": {
                        "name": "[concat(parameters('VM_dbserver_name'),'OSDisk')]",
                        "createOption": "FromImage",
                        "vhd": {
                            "uri": "[concat('https', '://', parameters('storageAccount_name'), '.blob.core.windows.net', concat('/vhds/', parameters('VM_dbserver_name'),'OSDisk.vhd'))]"
                        },
                        "caching": "ReadWrite"
                    },
                    "dataDisks": [
                        {
                            "lun": 0,
                            "name": "[concat(parameters('VM_dbserver_name'),'-dbDisK')]",
                            "createOption": "Empty",
                            "vhd": {
                                "uri": "[concat('https', '://', parameters('storageAccount_name'), '.blob.core.windows.net', concat('/vhds/', parameters('VM_dbserver_name'),'-dbDisK.vhd'))]"
                            },
                            "caching": "None",
                            "diskSizeGB": 512
                        }
                    ]
                },
                "osProfile": {
                    "computerName": "[parameters('VM_dbserver_name')]",
                    "adminUsername": "c9admin",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "secrets": [],
                    "adminPassword": "[parameters('VM_dbserver_adminPassword')]"
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('dbserver_NIC_name'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/availabilitySets', parameters('availabilitySet_name'))]",
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccount_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('dbserver_NIC_name'))]"
            ]
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('VM_webserver_name')]",
            "apiVersion": "2015-06-15",
            "location": "westeurope",
            "tags": {},
            "properties": {
                "availabilitySet": {
                    "id": "[resourceId('Microsoft.Compute/availabilitySets', parameters('availabilitySet_name'))]"
                },
                "hardwareProfile": {
                    "vmSize": "Standard_A2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "OpenLogic",
                        "offer": "CentOs",
                        "sku": "6.6",
                        "version": "6.6.20160309"
                    },
                    "osDisk": {
                        "name": "[concat(parameters('VM_webserver_name'),'OSDisk')]",
                        "createOption": "FromImage",
                        "vhd": {
                            "uri": "[concat('https', '://', parameters('storageAccount_name'), '.blob.core.windows.net', concat('/vhds/', parameters('VM_webserver_name'),'OSDisk.vhd'))]"
                        },
                        "caching": "ReadWrite"
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('VM_webserver_name')]",
                    "adminUsername": "c9admin",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "secrets": [],
                    "adminPassword": "[parameters('VM_webserver_adminPassword')]"
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('webserver_NIC_name'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/availabilitySets', parameters('availabilitySet_name'))]",
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccount_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('webserver_NIC_name'))]"
            ]
        },
        {
            "type": "Microsoft.Network/loadBalancers",
            "name": "[parameters('loadBalancers_name')]",
            "apiVersion": "2015-06-15",
            "location": "westeurope",
            "tags": {},
            "properties": {
                "frontendIPConfigurations": [
                    {
                        "name": "LBFE",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresse_name'))]"
                            }
                        }
                    }
                ],
                "backendAddressPools": [
                    {
                        "name": "LBBE"
                    }
                ],
                "loadBalancingRules": [
                    {
                        "name": "lb-http-rule",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[variables('frontEndIPConfigID')]"
                            },
                            "frontendPort": 80,
                            "backendPort": 80,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 4,
                            "protocol": "Tcp",
                            "loadDistribution": "SourceIPProtocol",
                            "backendAddressPool": {
                                "id": "[variables('lbPoolID')]"
                            },
                            "probe": {
                                "id": "[variables('lbProbeID')]"
                            }
                        }
                    }
                ],
                "probes": [
                    {
                        "name": "http-probe",
                        "properties": {
                            "protocol": "Tcp",
                            "port": 80,
                            "intervalInSeconds": 10,
                            "numberOfProbes": 5
                        }
                    }
                ],
                "inboundNatRules": [
                    {
                        "name": "webserver-ssh-nr",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[variables('frontEndIPConfigID')]"
                            },
                            "frontendPort": 65122,
                            "backendPort": 22,
                            "protocol": "Tcp"
                        }
                    },
                    {
                        "name": "dbserver-ssh-nr",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[variables('frontEndIPConfigID')]"
                            },
                            "frontendPort": 65222,
                            "backendPort": 22,
                            "protocol": "Tcp"
                        }
                    },
                    {
                        "name": "dbserver-phpmyadmin-nr",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[variables('frontEndIPConfigID')]"
                            },
                            "frontendPort": 8080,
                            "backendPort": 443,
                            "protocol": "Tcp"
                        }
                    }
                ],
                "outboundNatRules": [],
                "inboundNatPools": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresse_name'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('dbserver_NIC_name')]",
            "apiVersion": "2015-06-15",
            "location": "westeurope",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "192.168.1.5",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetwork_name')), '/subnets/SubNet1')]"
                            },
                            "loadBalancerInboundNatRules": [
                                {
                                    "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_name')), '/inboundNatRules/dbserver-ssh-nr')]"
                                },
                                {
                                    "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_name')), '/inboundNatRules/dbserver-phpmyadmin-nr')]"
                                }
                            ]
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroup_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetwork_name'))]",
                "[resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroup_name'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('webserver_NIC_name')]",
            "apiVersion": "2015-06-15",
            "location": "westeurope",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "192.168.1.4",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetwork_name')), '/subnets/SubNet1')]"
                            },
                            "loadBalancerBackendAddressPools": [
                                {
                                    "id": "[variables('lbPoolID')]"
                                }
                            ],
                            "loadBalancerInboundNatRules": [
                                {
                                    "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_name')), '/inboundNatRules/webserver-ssh-nr')]"
                                }
                            ]
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroup_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetwork_name'))]",
                "[resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroup_name'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroup_name')]",
            "apiVersion": "2015-06-15",
            "location": "westeurope",
            "tags": {},
            "properties": {
                "securityRules": [
                    {
                        "name": "webserver-ssh-ns",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "192.168.1.4",
                            "access": "Allow",
                            "priority": 3122,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "dbserver-ssh-ns",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "192.168.1.5",
                            "access": "Allow",
                            "priority": 3222,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "webserver-http",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 1080,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "dbserver-http-ns",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "192.168.1.5",
                            "access": "Allow",
                            "priority": 3080,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "dbserver-mysql",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "65222",
                            "destinationPortRange": "3306",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "192.168.1.5",
                            "access": "Allow",
                            "priority": 3306,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "webserver-https",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 500,
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresse_name')]",
            "apiVersion": "2015-06-15",
            "location": "westeurope",
            "properties": {
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "[parameters('dns_name')]"
                }
            },
            "dependsOn": [ ]
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetwork_name')]",
            "apiVersion": "2015-06-15",
            "location": "westeurope",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "192.168.1.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "SubNet1",
                        "properties": {
                            "addressPrefix": "192.168.1.0/24",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroup_name'))]"
                            }
                        }
                    }
                ]
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroup_name'))]"
            ]
        },
        {
            "type": "Microsoft.Storage/storageAccounts",
            "name": "[parameters('storageAccount_name')]",
            "apiVersion": "2015-06-15",
            "location": "westeurope",
            "tags": {},
            "properties": {
                "accountType": "Standard_LRS"
            },
            "dependsOn": []
        }
    ]
}
